pixmapdir   = $(datadir)/pixmaps
pixmap_DATA =					\
	gnome-emacs.png				\
	gnome-aorta.png				\
	gnome-applets.png			\
	gnome-calc2.png				\
	gnome-calc3.png				\
	gnome-calendar.png			\
	gnome-color-browser.png			\
	gnome-color-xterm.png           	\
	gnome-cromagnon.png			\
	gnome-diskfree.png          		\
	gnome-file-c.png			\
	gnome-file-h.png			\
	gnome-folder.png			\
	gnome-gemvt.png				\
	gnome-gimp.png				\
	gnome-gmenu.png				\
	gnome-gmush.png				\
	gnome-gnomoku.png			\
	gnome-home.png				\
	gnome-html.png				\
	gnome-image-gif.png			\
	gnome-image-jpeg.png			\
	gnome-touristinfo.png       		\
	gnome-irc.png				\
	gnome-laptop.png            		\
	gnome-log.png				\
	gnome-logo-icon.png			\
	gnome-logo-icon-transparent.png		\
	gnome-logo-large.png			\
	gnome-mdi.png				\
	gnome-mnemonic.png			\
	gnome-news.png				\
	gnome-note.png				\
	gnome-qeye.png				\
	gnome-spider.png			\
	gnome-squeak.png            		\
	gnome-talk.png				\
	gnome-term-linux.png			\
	gnome-term-linux2.png			\
	gnome-term-night.png			\
	gnome-term-tiger.png			\
	gnome-eterm.png				\
	gnome-xterm.png				\
	gnome-term.png				\
	gnome-tigert.png			\
	gnome-user-interface.png		\
	gnome-windows.png			\
	gnome-word.png				\
	kterm.xpm				\
	vnterm.xpm				\
	monitor.png				\
	gnome-mouse.png				\
	gnome-background.png			\
	apple-green.png				\
	apple-red.png				\
	gnome-ccbackground.png			\
	gnome-ccdesktop.png     		\
	gnome-ccdialog.png			\
	gnome-ccmime.png    			\
	gnome-ccscreensaver.png			\
	gnome-ccwindowmanager.png 		\
	gnome-ccperiph.png      		\
	gnome-debian.png			\
	gnome-suse.png				\
	gtkvim.png				\
	gnome-computer.png			\
	gnome-day.png				\
	gnome-week.png				\
	gnome-month.png				\
	gnome-background-image.png		\
	gnome-background-pattern.png		\
	gnome-set-time.png

EXTRA_DIST = $(pixmap_DATA)

-include $(top_srcdir)/git.mk
