headersdir = $(datadir)/gnome-about/headers
headers_DATA =				\
	header-bg-ancient01a.png	\
	header-bg-city01.png		\
	header-bg-clouds01.png		\
	header-bg-clouds02.png		\
	header-bg-hills01.png		\
	header-bg-landscape01.png	\
	header-bg-mountains01.png	\
	header-bg-snow01.png		\
	header-bg-sunset01.png

EXTRA_DIST = $(headers_DATA)

-include $(top_srcdir)/git.mk
